--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "homepage": "https://DavinciUI.github.io/web",
   "scripts": {
-    "deploy": "npm run build && gh-pages -d build"
+    "deploy": "npm run build && gh-pages -d build",
+    "build": "react-scripts build"
   },
   "dependencies": {
     "cra-template-typescript": "1.1.2",
