--- a/package.json
+++ b/package.json
@@ -13,6 +13,19 @@
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
+    "@types/react-dom": "^17.0.9",
     "gh-pages": "^3.2.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
